Upgrade to Java 18 and refactor